# rda-doi_manager

./: README.md  pyproject.toml  settings.txt
src/doi_manager/: doi_manage.py  local_settings.py
