[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doi_manager"
version = "1.0.1"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "libpkg @ git+https://github.com/rda-dattore/testpkg#subdirectory=libpkg",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
doi_manage = "doi_manager.doi_manage:main"

[tool.setuptools.package-data]
doi_manager = ["local_settings.py"]
